<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:gravity="center_horizontal">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/unlocked_msg"/>

	<ImageView
		android:id="@+id/unlocked_img"
		android:layout_width="40dp"
		android:layout_height="40dp"
		android:src="@drawable/vache"
		android:contentDescription="@string/vaches"/>

	<TextView
		android:id="@+id/unlocked_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textStyle="bold"
		android:text="@string/vaches"/>

	<TextView
		android:id="@+id/unlocked_next_txt"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="6dp"
		android:gravity="center"
		android:text="@string/unlocked_msg_2_1"/>

	<ImageView
		android:id="@+id/unlocked_next_img"
		android:layout_width="30dp"
		android:layout_height="30dp"
		android:src="@drawable/chat"
		android:contentDescription="@string/chats"/>

	<TextView
		android:id="@+id/unlocked_next_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textStyle="bold"
		android:text="@string/dynamites"/>
</LinearLayout>